fixed overlapping layouts

--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,7 @@ header {
 
 .main-section {
   width: 100%;
-  height: 80vh;
+  min-height: 80vh;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
@@ -763,7 +763,7 @@ NAVIGATION CUSTOM START **/
 }
 
 .v-slider-group p:nth-child(2) {
-  font-weight: 400;
+  font-weight: 100;
   font-size: 1.8rem;
   color: var(--text-color);
   text-align: center;
